contrast fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -267,7 +267,7 @@ header {
 /* VISIT */
 
 .red-color {
-  color: red;
+  color: #FF9933;
   font-weight: bold;
 }
 
